  \item A warning is no longer generated when the first argument of
        \code{.C}, \code{.Fortran}, \code{.Call}, or \code{.External} is
        given its proper name of \code{.NAME}.  Passing more than one
        \code{PACKAGE}, \code{NAOK}, \code{DUP}, \code{HELPERS}, or
        \code{ENCODING} argument now results in an error rather than a
        warning. 
  }}

  \subsection{NEW FEATURES FROM R CORE RELEASES}{
  \itemize{
  \item From R-3.1.0: The way the unary operators (\code{+ - !}) handle
        attributes is now more consistent.  If there is no coercion,
        all attributes (including class) are copied from the input to
        the result: otherwise only names, dims and dimnames are.

  \item From R-3.0.0: There is a new function \code{rep_len()} analogous to 
        \code{rep.int()} for when speed is required (and names are not).

        Note, however, that in pqR \code{rep} is as fast as
        \code{rep_len} (and also \code{rep.int}) when there are no names.

  \item From R-3.1.2: \code{capabilities()} now reports if ICU is
        compiled in for use for collation (it is only actually used if
        a suitable locale is set for collation, and never for a
        \code{C} locale).

  \item From R-3.1.2: \code{icuSetCollate()} allows \code{locale = "default"},
        and \code{locale = "none"} to use OS services rather than ICU for
        collation.

        Environment variable \env{R_ICU_LOCALE} can be used to set the
        default ICU locale, in case the one derived from the OS locale is
        inappropriate (this is currently necessary on Windows).

  \item From R-3.1.2: New function \code{icuGetCollate()} to report on the ICU
        collation locale in use (if any).

  \item From R-3.1.3: \code{icuSetCollate()} now accepts \code{locale = "ASCII"}
        which uses the basic C function \code{strcmp} and so collates
        strings byte-by-byte in numerical order.
